compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__pipe_in_list.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub fn x(f) {\n  [\n    1 |> f\n  ]\n}"

---
-module(the_app).
-compile(no_auto_import).

-export([x/1]).

-spec x(fun((integer()) -> D)) -> list(D).
x(F) ->
    [begin
         _pipe = 1,
         F(_pipe)
     end].

