compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__positive_zero.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub fn main() {\n  0.0\n}\n"
---
----- SOURCE CODE

pub fn main() {
  0.0
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> float().
main() ->
    +0.0.
