compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__qualified_prelude-2.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "import gleam\npub fn x() { gleam.Ok(1) }\n"

---
-module(the_app).
-compile(no_auto_import).

-export([x/0]).

-spec x() -> {ok, integer()} | {error, any()}.
x() ->
    {ok, 1}.

