compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__qualified_prelude.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "import gleam\npub type X { X(gleam.Int) }\n"

---
-module(the_app).
-compile(no_auto_import).

-export_type([x/0]).

-type x() :: {x, integer()}.



