compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__record_accessors.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub type Person { Person(name: String, age: Int) }\npub fn get_age(person: Person) { person.age }\npub fn get_name(person: Person) { person.name }\n"

---
-module(the_app).
-compile(no_auto_import).

-export([get_age/1, get_name/1]).
-export_type([person/0]).

-type person() :: {person, binary(), integer()}.

-spec get_age(person()) -> integer().
get_age(Person) ->
    erlang:element(3, Person).

-spec get_name(person()) -> binary().
get_name(Person) ->
    erlang:element(2, Person).

