compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__record_constants.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub type Test { A }\nconst test = A\npub fn a() { A }"

---
-module(the_app).
-compile(no_auto_import).

-export([a/0]).
-export_type([test/0]).

-type test() :: a.

-spec a() -> test().
a() ->
    a.

