compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__record_spread-2.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\ntype Triple {\n  Triple(a: Int, b: Int, c: Int)\n}\n\nfn main() {\n  let triple = Triple(1,2,3)\n  let Triple(b: the_b, ..) = triple\n  the_b\n}\n"

---
-module(the_app).
-compile(no_auto_import).

-export_type([triple/0]).

-type triple() :: {triple, integer(), integer(), integer()}.

-spec main() -> integer().
main() ->
    Triple = {triple, 1, 2, 3},
    {triple, _@1, The_b, _@2} = Triple,
    The_b.

