compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__record_spread.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\ntype Triple {\n    Triple(a: Int, b: Int, c: Int)\n}\n\nfn main() {\n  let triple = Triple(1,2,3)\n  let Triple(the_a, ..) = triple\n  the_a\n}\n"

---
-module(the_app).
-compile(no_auto_import).

-export_type([triple/0]).

-type triple() :: {triple, integer(), integer(), integer()}.

-spec main() -> integer().
main() ->
    Triple = {triple, 1, 2, 3},
    {triple, The_a, _@1, _@2} = Triple,
    The_a.

